kanc/src/tests/sample_code/should_fail/single_file/parse/component_kw_in_dot_rhs/mod_dot_super.k
let x = mod.super.Nat.O;
